force-app/main/default/objects/Revenue_by_Billing_Account__c/Revenue_by_Billing_Account__c.object-meta.xml
<CustomObject>
    <description>Phase 2 - Revenue at the Billing Account level, with Credit and Rebate data.</description>
    <label>Revenue by Billing Account</label>
    <nameField>
        <label>Revenue by Billing Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue by Billing Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>