force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Aug_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aug_Credit_Amount__c</fullName>
    <label>Aug Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>