force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Revenue</relationshipLabel>
    <relationshipName>Revenue_by_Billing_Account</relationshipName>
    <type>Lookup</type>
</CustomField>