force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue by Billing Account</relationshipLabel>
    <relationshipName>Revenue_by_Billing_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>