force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Int_Last_Upd_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_Last_Upd_Date__c</fullName>
    <label>Integration Last Updated Date</label>
    <type>Date</type>
</CustomField>