force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Jul_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Jul_Rebate_Amount__c</fullName>
    <label>Jul Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>