force-app/main/default/objects/Revenue_by_Billing_Account__c/fields/Q1_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Q1_Rebate_Amount__c</fullName>
    <label>Q1 Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>